# prox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-example-websocket.yaml  config-http3-example.yaml  config.yaml  deny.toml  docker-compose.yml  prometheus.yml
.github/workflows/: rust.yml
certs/: README.md  cert-placeholder.pem  key-placeholder.pem
docs/: HTTP3_IMPLEMENTATION.md  MONITORING_STACK_SETUP.md  REVERSE_PROXY_VALUE_ADDITIONS.md
k8s/: configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml
src/: lib.rs  main.rs  metrics.rs  tracing_setup.rs
src/adapters/: acme.rs  file_system.rs  health_checker.rs  http_client.rs  http_handler.rs  middleware.rs  mod.rs  unified_server.rs
src/adapters/http/: mod.rs  server.rs
src/adapters/http3/: config.rs  connection.rs  handler.rs  mod.rs  server.rs  tests.rs
src/config/: loader.rs  mod.rs  models.rs  validation.rs
src/core/: backend.rs  load_balancer.rs  mod.rs  proxy.rs  rate_limiter.rs
src/ports/: file_system.rs  http_client.rs  http_server.rs  mod.rs
src/utils/: connection_tracker.rs  graceful_shutdown.rs  health_checker_utils.rs  mod.rs
static/: index.html
