[package]
name = "prox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["http1", "http2"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rand = "0.8"
http = "0.2"
http-body = "0.4"
# TLS dependencies
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
axum-server = { version = "0.5", features = ["tls-rustls"] }
# Health checking dependencies
dashmap = "5.4.0"
# Additional dependencies for hexagonal architecture
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
bytes = "1.0"
http-body-util = "0.1"
