[package]
name = "prox"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }

[dependencies]
axum = { version = "0.8", features = ["http1", "http2"] } 
hyper = { version = "1.6", features = ["full"] } 
hyper-tls = "0.6" 
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5" 
tower-http = { version = "0.6.4", features = ["fs", "trace"] } 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.38", features = ["derive"] } 
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"   # Added for better error handling
rand = "0.9" 
http = "1.3" 
http-body = "1.0" 
notify = "8.0.0" # For config file watching
# TLS dependencies
rustls = "0.23.27" 
aws-lc-rs = "1.13.1" 
rustls-pemfile = "2.2" 
tokio-rustls = "0.26" 
axum-server = { version = "0.7", features = ["tls-rustls"] } 
# Health checking dependencies
dashmap = "6.1" 
# Additional dependencies for hexagonal architecture
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
bytes = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"]}
