[package]
name = "prox"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }

[dependencies]
axum = { version = "0.8", features = ["http1", "http2"] } 
hyper = { version = "1.6", features = ["full"] } 
hyper-rustls = "0.27.1" 
rustls-native-certs = "0.7.0"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5" 
tower-http = { version = "0.6.4", features = ["fs", "trace"] } 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5.38", features = ["derive"] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "2.0"   

# Prometheus metrics dependencies
axum-prometheus = "0.7.0"
metrics-exporter-prometheus = "0.15.3"
metrics = "0.23.0" # Added for direct use of macros/types

rand = "0.9" 
http = "1.3" 
http-body = "1.0" 
notify = "8.0.0" 
# TLS dependencies
rustls = "0.23.27" 
aws-lc-rs = "1.13.1" 
rustls-pemfile = "2.2" 
tokio-rustls = "0.26" 
axum-server = { version = "0.7", features = ["tls-rustls"] } 
# Health checking dependencies
dashmap = "6.1" 
# Additional dependencies for hexagonal architecture
futures-util = "0.3"
bytes = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"]}

# Rate limiting dependencies
governor = "0.10.0"

humantime = "2.1.0"
chrono = { version = "0.4", features = ["serde"] } 
regex = "1"
url = "2.5"
once_cell = "1.19.0"

# ACME/Let's Encrypt dependencies
instant-acme = "0.7.2"
rcgen = "0.13"

# Prometheus metrics dependencies
prometheus = { version = "0.14.0", features = ["process"] }

[dev-dependencies]
tempfile = "3.13"
